--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,12 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
+    "strictPropertyInitialization": false,
+    "paths": {
+      "revionic-lib": [
+        "dist/revionic-lib"
+      ]
+    },
     "target": "es2020",
     "module": "es2020",
     "lib": [
